# AI

./: .gitignore
Spatial-awareness/: .env.example  .gitignore  config.py  main.py  pyproject.toml  requirements.txt
Spatial-awareness/.claude/: settings.local.json
Spatial-awareness/docs/: HANDOFF.md  shooting_guide.md
Spatial-awareness/scripts/: install_colmap.py
Spatial-awareness/spatial/: cli.py
Spatial-awareness/spatial/ingest/: video_extractor.py
Spatial-awareness/spatial/pipeline/: runner.py
Spatial-awareness/spatial/sfm/: colmap_runner.py
Spatial-awareness/spatial/utils/: gpu.py  logging_config.py  platform_compat.py
Spatial-awareness/spatial/viewer/: __main__.py  server.py
Spatial-awareness/spatial/viewer/static/: index.html  style.css  viewer.js
action_recorder/: .gitignore  config.py  main.py  requirements.txt
action_recorder/assistant/: action_classifier.py  feature_extractor.py  pattern_engine.py  predictor.py
action_recorder/core/: action_types.py  recorder.py  region_selector.py  replayer.py  screen_capture.py  timing.py
action_recorder/gui/: app.py  assistant_panel.py  recording_panel.py  region_overlay.py  settings_panel.py  timeline_panel.py
action_recorder/gui/widgets/: action_list.py  hotkey_entry.py  status_bar.py  timeline_canvas.py
action_recorder/storage/: database.py  models.py  queries.py
action_recorder/utils/: coordinate_transform.py  logging_config.py  serialization.py  win32_helpers.py
auto/discord-ai-bot/: .env.example  package-lock.json  package.json
auto/discord-ai-bot/src/: config.ts  index.ts
(+2 files in other folders)
